src/views/Post/style.css
.post.container {
  display: flex;
  flex-direction: column;
  margin: 0 !important;
  text-align: left;
}

.post.container .container {
  margin: 1em !important;
  padding-top: 3rem;
}

.post.container .container .ui.header {
  text-align: start;
  color: #000000;
  font-size: 2rem;
  font-weight: 100;
}

.post.container .sub.header {
  color: #999;
  font-size: 1rem;
  margin-top: 5%;
  margin-bottom: 5%;
}

.post.container .sub.header b {
  color: #000000;
}

/* .ui.justified.container {
  height: unset;
} */

.post.container .container .label {
  height: unset;
  border-radius: 2px;
  font-size: 1rem;
  font-weight: 100;
  padding: 10px 5px;
  margin: 5px;
}

.post.container .container .post-content iframe {
  max-width: 100%;
  height: auto;
}

.post.container .container .post-content img {
  max-width: 100%;
  height: auto;
}

.post.container .container .ui.image {
  width: 100%;
  height: auto;
}

/* ICON */
.post.container i.icon {
  color: #ffffff;
  background-color: rgba(116, 116, 116, 0.59);
  box-shadow: none;
  font-size: 1.4em;
}

.post.container i.icon.circular.chevron.left {
  position: absolute;
  z-index: 1;
  top: 10px;
  left: 10px;
}

.post.container i.icon.circular.share {
  margin: 10px;
}

.post.container .transition-container {
  display: flex;
  justify-content: flex-end;
}

/* FIX FOR EXTRA DIV FORM react-router-modal */
.ui.container.post + div {
  display: none;
}

/* MODAL */

.scrolling.dimmable.dimmed > .dimmer {
  overflow: hidden;
}
.dimmed.dimmable > .ui.animating.dimmer,
.dimmed.dimmable > .ui.visible.dimmer,
.ui.active.dimmer {
  opacity: 0.9;
}

.ui.page.modals.dimmer.transition.visible.active .actions {
  display: flex;
  justify-content: space-evenly;
  align-items: flex-end;
  height: 93%;
}
.ui.page.modals.dimmer.transition.visible.active .social {
  justify-content: space-evenly;
  display: flex;
}

